Version 1.3 (2010-XX-XX)
------------------------------------------------------------------------------

* quickdf now adds names if missing

* arrays with names should be sorted correctly once again (also fixed a bug in
  the test case that prevented me from catching this automatically)

* m_ply no longer possesses .parallel argument (mistakenly added)

* ldply (and hence adply and ddply) now correctly passes on .parallel argument
  (Fixes #16)

Version 1.2.1 (2010-09-10)
------------------------------------------------------------------------------

* Fix bug in llply fast path that causes problems with ggplot2.

Version 1.2 (2010-09-09)
------------------------------------------------------------------------------

NEW FEATURES

* l*ply, d*ply, a*ply and m*ply all gain a .parallel argument that when TRUE,
  applies functions in parallel using a parallel backend registered with the
  foreach package:

  x <- seq_len(20)
  wait <- function(i) Sys.sleep(0.1)
  system.time(llply(x, wait))
  #  user  system elapsed 
  # 0.007   0.005   2.005 
   
  library(doMC)
  registerDoMC(2) 
  system.time(llply(x, wait, .parallel = TRUE))
  #  user  system elapsed 
  # 0.020   0.011   1.038 

  This work has been generously supported by BD (Becton Dickinson).

MINOR CHANGES

* a*ply and m*ply gain an .expand argument that controls whether data frames
  produce a single output dimension (one element for each row), or an output
  dimension for each variable.

* new vaggregate (vector aggregate) function, which is equivalent to tapply,
  but much faster (~ 10x), since it avoids copying the data.

* llply: for simple lists and vectors, with no progress bar, no extra info,
  and no parallelisation, llply calls lapply directly to avoid all the
  overhead associated with those unused extra features.

* llply: in serial case, for loop replaced with custom C function that takes
  about 40% less time (or about 20% less time than lapply). Note that as a